# numb.rs

./: Cargo.toml  README.md
src/: complex.rs  decomposition.rs  geometry.rs  lib.rs  matrix.rs  vector.rs
tests/: complex_tests.rs  matrix_tests.rs  vector_tests.rs
