[package]
name = "numbrs"
version = "0.1.0"
edition = "2021"

[features]
default = ["std"]
std = []

[dependencies]
num = { version = "0.4", default-features = false, features = ["libm"] }
num-traits = { version = "0.2.19", default-features = false, features = ["libm"] }

[dev-dependencies]
criterion = "0.4"  # For benchmarks
